# CogniVerse_by_EvoQ

./: .env.template  README.md  TERMS_OF_SERVICE.md  api.yaml  docs.py  pyproject.toml  requirements.txt
.github/workflows/: django_tests.yml
config/: celery.py  settings.py  urls.py
courses/: models.py  paginators.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner.py  0003_course_price.py
fixtures/: payment.json
lessons/: models.py  paginators.py  serializers.py  tests.py  validators.py  views.py
lessons/migrations/: 0001_initial.py  0002_alter_lesson_date_modified.py  0003_lesson_course.py  0004_alter_lesson_course.py  0005_lesson_owner.py  0006_lesson_price.py  0007_alter_lesson_course_alter_lesson_description_and_more.py  0008_alter_lesson_owner.py
payments/: models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
payments/migrations/: 0001_initial.py  0002_rename_course_bought_payment_course_and_more.py  0003_alter_payment_options.py  0004_remove_payment_payment_type_payment_payment_method.py  0005_alter_payment_unique_together.py  0006_rename_payed_price_payment_paid_price.py
subscribers/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
subscribers/migrations/: 0001_initial.py
users/: managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_city_and_more.py  0003_alter_user_email.py  0004_alter_user_managers.py  (+1 more)
